@@ -1,7 +1,11 @@
 .TH "History For AdvanceSCAN" 1
 .SH NAME
 advscan \(hy History For AdvanceSCAN
-.SH ADVANCESCAN VERSION 1.14 2005/01 
+.SH ADVANCESCAN VERSION 1.14 2008/12 
+.PD 0
+.IP \(bu
+Fixed the recognition of the XML \(cqinbios\(cq atttribute.
+.PD
 .SH ADVANCESCAN VERSION 1.13 2004/12 
 .PD 0
 .IP \(bu
