@@ -5,8 +5,13 @@
 <body>
 <center><h2>History For AdvanceSCAN</h2></center>
 <h2> 
-AdvanceSCAN Version 1.14 2005/01
+AdvanceSCAN Version 1.14 2008/12
 </h2>
+<ul>
+<li>
+Fixed the recognition of the XML 'inbios' atttribute.
+</li>
+</ul>
 <h2> 
 AdvanceSCAN Version 1.13 2004/12
 </h2>
